--- a/bvdoma.html
+++ b/bvdoma.html
@@ -100,7 +100,7 @@
     <section class="savings-section">
         <div class="container">
             <h2>ДО 1 120 000 Р ЭКОНОМИИ — ПОКАЖЕМ, ЗА СЧЕТ ЧЕГО</h2>
-            <p class="section-subtitle">Экономите на фундаменте, рабочей силе и отоплении — конструкция легче, точнее и теплее капитального дома</p>
+            <p class="section-subtitle">Экономиете на фундаменте, рабочей силе и отоплении — конструкция легче, точнее и теплее капитального дома</p>
             
             <div class="savings-grid">
                 <div class="saving-item">
@@ -302,19 +302,6 @@
                         <p>Площадь 75 м², 3 комнаты, уютная терраса</p>
                         <p class="client">Семья Ивановых</p>
                         <p class="client-location">с.п. Завидово</p>
-                    </div>
-                </div>
-                
-                <div class="project-item">
-                    <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1600566752355-35792bedcfea?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Проект Барнхаус">
-                    </div>
-                    <div class="project-info">
-                        <p class="location">Архангельская область</p>
-                        <h3>Проект БАРНХАУС 83 м²</h3>
-                        <p>Дом 83 м², модуль 6 метров</p>
-                        <p class="client">Артем Петров</p>
-                        <p class="client-location">СНГ «Березка»</p>
                     </div>
                 </div>
             </div>
@@ -566,7 +553,7 @@
                     <li><a href="/index.html">Главная</a></li>
                     <li><a href="/project.html">Проекты</a></li>
                     <li><a href="/terrace.html">Террасные покрытия</a></li>
-                    <li><a href="/bvdoma.html">Быстровозводимые дома</a></li>
+                    <li><a href="/bvdoma.html">Модульные дома</a></li>
                     <li><a href="/material.html">Материалы</a></li>
                     <li><a href="/services.html">Услуги</a></li>
                     <li><a href="/company.html">О компании</a></li>
