--- a/company.html
+++ b/company.html
@@ -70,9 +70,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="about-image">
+              <!--  <div class="about-image">
                     <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Наш офис">
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -112,25 +112,25 @@
             <h2 class="section-title">Наша команда</h2>
             <div class="team-grid">
                 <div class="team-member">
-                    <div class="member-photo" style="background-image: url('https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
+               <!--     <div class="member-photo" style="background-image: url('https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div> -->
                     <h3>Иван Петров</h3>
                     <p class="position">Генеральный директор</p>
                     <p class="bio">Основатель компании. Опыт в строительстве — 20 лет.</p>
                 </div>
                 <div class="team-member">
-                    <div class="member-photo" style="background-image: url('https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
+              <!--      <div class="member-photo" style="background-image: url('https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>-->
                     <h3>Елена Смирнова</h3>
                     <p class="position">Главный архитектор</p>
                     <p class="bio">Разрабатывает уникальные проекты домов с 2008 года.</p>
                 </div>
                 <div class="team-member">
-                    <div class="member-photo" style="background-image: url('https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
+              <!--      <div class="member-photo" style="background-image: url('https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>-->
                     <h3>Алексей Козлов</h3>
                     <p class="position">Технический директор</p>
                     <p class="bio">Отвечает за качество строительства и соблюдение технологий.</p>
                 </div>
                 <div class="team-member">
-                    <div class="member-photo" style="background-image: url('https://images.unsplash.com/photo-1551836022-d5d88e9218df?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
+              <!--      <div class="member-photo" style="background-image: url('https://images.unsplash.com/photo-1551836022-d5d88e9218df?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>-->
                     <h3>Ольга Иванова</h3>
                     <p class="position">Менеджер проектов</p>
                     <p class="bio">Координирует все этапы строительства и взаимодействие с клиентами.</p>
