--- a/material.html
+++ b/material.html
@@ -144,7 +144,7 @@
                 
                 <!-- Карточка материала 4 -->
                 <div class="material-card" data-category="roofing">
-                    <div class="material-image" style="background-image: url('https://images.unsplash.com/photo-1591955506264-3f5a6834570a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
+                    <div class="material-image" style="background-image: url('https://i.pinimg.com/736x/b8/68/cf/b868cf28c80d5fc663ab01344d0a5534.jpg');"></div>
                     <div class="material-content">
                         <h3>Металлочерепица</h3>
                         <div class="material-properties">
