--- a/contacts.html
+++ b/contacts.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <!-- Навигационное меню -->
-    <nav id="navbar">
+     <nav id="navbar">
         <div class="nav-container">
-            <a href="index.html" class="logo">EarthDom</a>
+            <a href="/" class="logo">EarthDom</a>
             <button class="mobile-menu-toggle" aria-label="Меню">
-                <span></span>
+                  <span></span>
                 <span></span>
                 <span></span>
             </button>
             <ul class="nav-links">
-                 <li><a href="/project.html">Проекты</a></li>
-                <li><a href="/terrace.html">Террасные покрытия</a></li>
+                <li><a href="/project.html">Проекты</a></li>
+                 <li><a href="/terrace.html">Террасные покрытия</a></li>
                 <li><a href="/bvdoma.html">Быстровозводимые дома</a></li>
                 <li><a href="/material.html">Материалы</a></li>
                 <li><a href="/services.html">Услуги</a></li>
@@ -33,7 +33,6 @@
             </ul>
         </div>
     </nav>
-
     <!-- Герой-секция -->
     <section class="contacts-hero">
         <div class="container">
