--- a/bvdoma.html
+++ b/bvdoma.html
@@ -19,7 +19,7 @@
             <ul class="nav-links">
                 <li><a href="/project.html">Проекты</a></li>
                 <li><a href="/terrace.html">Террасные покрытия</a></li>
-                <li><a href="/bvdoma.html" class="active">Модульные дома</a></li>
+                <li><a href="/bvdoma.html" class="active">Быстровозводимые дома</a></li>
                 <li><a href="/material.html">Материалы</a></li>
                 <li><a href="/services.html">Услуги</a></li>
                 <li><a href="/company.html">О компании</a></li>
