--- a/project.html
+++ b/project.html
@@ -59,7 +59,7 @@
             <div class="projects-grid">
                 <!-- Проект 1 -->
                 <div class="project-card" data-category="medium completed"> <!-- В data-category прописывается тип дома  -->
-                    <div class="project-img" style="background-image: url('https://images.unsplash.com/photo-1582268611958-ebfd161ef9cf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
+                    <div class="project-img" style="background-image: url('https://i.pinimg.com/736x/02/2d/14/022d1470d1410718c857f77e86a99049.jpg');"></div>
                     <div class="project-info">
                         <h3>Дом "Северный"</h3>
                         <p>Площадь: 120 м²</p>
@@ -72,7 +72,7 @@
                 
                 <!-- Проект 2 -->
                 <div class="project-card" data-category="small completed">
-                    <div class="project-img" style="background-image: url('https://images.unsplash.com/photo-1600607688969-a5bfcd646154?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
+                    <div class="project-img" style="background-image: url('https://i.pinimg.com/1200x/9f/8d/9f/9f8d9fabbacb8e6145caf82c13e89f47.jpg');"></div>
                     <div class="project-info">
                         <h3>Дом "Лесной"</h3>
                         <p>Площадь: 95 м²</p>
