--- a/bvdoma.html
+++ b/bvdoma.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     <!-- Навигационное меню -->
-    <nav id="navbar">
+   <nav id="navbar">
         <div class="nav-container">
             <a href="/" class="logo">EarthDom</a>
             <button class="mobile-menu-toggle" aria-label="Меню">
-                <span></span>
+                  <span></span>
                 <span></span>
                 <span></span>
             </button>
             <ul class="nav-links">
                 <li><a href="/project.html">Проекты</a></li>
-                <li><a href="/terrace.html">Террасные покрытия</a></li>
-                <li><a href="/bvdoma.html" class="active">Быстровозводимые дома</a></li>
+                 <li><a href="/terrace.html">Террасные покрытия</a></li>
+                <li><a href="/bvdoma.html">Быстровозводимые дома</a></li>
                 <li><a href="/material.html">Материалы</a></li>
                 <li><a href="/services.html">Услуги</a></li>
                 <li><a href="/company.html">О компании</a></li>
