--- a/project.html
+++ b/project.html
@@ -10,20 +10,20 @@
     <!-- Навигационное меню -->
     <nav id="navbar">
         <div class="nav-container">
-            <a href="index.html" class="logo">EarthDom</a>
-              <button class="mobile-menu-toggle" aria-label="Меню">
-                <span></span>
+            <a href="/" class="logo">EarthDom</a>
+            <button class="mobile-menu-toggle" aria-label="Меню">
+                  <span></span>
                 <span></span>
                 <span></span>
             </button>
             <ul class="nav-links">
-                <li><a href="project.html" class="active">Проекты</a></li>
-                <li><a href="terrace.html">Террасные покрытия</a></li>
+                <li><a href="/project.html">Проекты</a></li>
+                 <li><a href="/terrace.html">Террасные покрытия</a></li>
                 <li><a href="/bvdoma.html">Быстровозводимые дома</a></li>
-                <li><a href="material.html">Материалы</a></li>
-                <li><a href="services.html">Услуги</a></li>
-                <li><a href="company.html">О компании</a></li>
-                <li><a href="contacts.html">Контакты</a></li>
+                <li><a href="/material.html">Материалы</a></li>
+                <li><a href="/services.html">Услуги</a></li>
+                <li><a href="/company.html">О компании</a></li>
+                <li><a href="/contacts.html">Контакты</a></li>
                 <li>
                     <button id="theme-toggle" class="theme-toggle">
                         <span class="theme-icon">🌓</span>
