--- a/bvdoma.html
+++ b/bvdoma.html
@@ -428,7 +428,7 @@
         <!-- Секция преимуществ -->
     <section class="advantages-section">
         <div class="container">
-            <h2>ДОМА И ОДИНЫ: ПРЕИМУЩЕСТВА НАШИХ МОДУЛЬНЫХ РЕШЕНИЙ</h2>
+            <h2>ДОМА И БАНИ: ПРЕИМУЩЕСТВА НАШИХ МОДУЛЬНЫХ РЕШЕНИЙ</h2>
             
             <div class="advantages-grid">
                 <div class="advantage-card">
