--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     
     <!-- Герой-секция с слайдером -->
     <section class="hero">
-        <div class="slide active" style="background-image: url('https://i.pinimg.com/1200x/a7/4f/ab/a74fabef48293b3a9b04e34d7eb6dd70.jpg');"></div>
-        <div class="slide" style="background-image: url('https://i.pinimg.com/1200x/e8/64/93/e864930d8e572f041870293ba9e052c6.jpg');"></div>
-        <div class="slide" style="background-image: url('https://i.pinimg.com/736x/47/a1/94/47a1944dff6e91e277a3da73b1f0e894.jpg');"></div>
-        <div class="slide" style="background-image: url('https://i.pinimg.com/1200x/9f/8d/9f/9f8d9fabbacb8e6145caf82c13e89f47.jpg');"></div>
+        <div class="slide active" style="background-image: linear-gradient(rgba(44, 62, 80, 0.8), rgba(44, 62, 80, 0.8)), url('https://i.pinimg.com/1200x/a7/4f/ab/a74fabef48293b3a9b04e34d7eb6dd70.jpg');"></div>
+        <div class="slide" style="background-image: linear-gradient(rgba(44, 62, 80, 0.8), rgba(44, 62, 80, 0.8)), url('https://i.pinimg.com/1200x/e8/64/93/e864930d8e572f041870293ba9e052c6.jpg');"></div>
+        <div class="slide" style="background-image: linear-gradient(rgba(44, 62, 80, 0.8), rgba(44, 62, 80, 0.8)), url('https://i.pinimg.com/736x/47/a1/94/47a1944dff6e91e277a3da73b1f0e894.jpg');"></div>
+        <div class="slide" style="background-image: linear-gradient(rgba(44, 62, 80, 0.8), rgba(44, 62, 80, 0.8)), url('https://i.pinimg.com/1200x/9f/8d/9f/9f8d9fabbacb8e6145caf82c13e89f47.jpg');"></div>
         
         <div class="hero-content hero-content-left">
             <h1>Проектирование и строительство каркасных домов</h1>
