--- a/project.html
+++ b/project.html
@@ -53,6 +53,8 @@
                 <button class="filter-btn" data-filter="medium">Средние дома</button>
                 <button class="filter-btn" data-filter="large">Большие дома</button>
                 <button class="filter-btn" data-filter="completed">Завершенные</button>
+                <button class="filter-btn" data-filter="completed">Отделка фасадов</button>
+                
             </div>
 
             <!-- Сетка проектов -->
