--- a/project.html
+++ b/project.html
@@ -68,7 +68,7 @@
             <p>Срок строительства: 3 месяца</p>
             <div class="project-details">
                 <span class="project-price">от 1 800 000 ₽</span>
-                <button class="project-view-btn" data-project="Дом \"Северный\"">Смотреть фото</button>
+                <button class="project-view-btn" data-project= "Дом \'Северный\'">Смотреть фото</button>
             </div>
         </div>
     </div>
