--- a/project.html
+++ b/project.html
@@ -232,13 +232,15 @@
         </div>
     </footer>
 
-    <!-- Модальное окно проекта -->
+ <!-- Модальное окно проекта -->
 <div id="projectModal" class="modal">
     <div class="modal-content">
         <span class="modal-close">&times;</span>
         <div class="modal-body">
             <div class="modal-image">
                 <img id="modalProjectImage" src="" alt="Проект дома">
+                <!-- Контейнер для миниатюр -->
+                <div class="thumbnails-container" id="modalProjectThumbnails"></div>
             </div>
             <div class="modal-info">
                 <h2 id="modalProjectTitle"></h2>
@@ -260,7 +262,6 @@
         </div>
     </div>
 </div>
-
     <script src="js/projects.js"></script>
     <script src="js/script.js"></script>
     
