--- a/project.html
+++ b/project.html
@@ -233,6 +233,7 @@
     </footer>
 
  <!-- Модальное окно проекта -->
+<!-- Модальное окно проекта -->
 <div id="projectModal" class="modal">
     <div class="modal-content">
         <span class="modal-close">&times;</span>
