--- a/project.html
+++ b/project.html
@@ -96,7 +96,7 @@
             <p>Срок строительства: 4 месяца</p>
             <div class="project-details">
                 <span class="project-price">от 2 250 000 ₽</span>
-                <button class="project-view-btn" data-project="Дом \"Солнечный\"">Смотреть фото</button>
+                <button class="project-view-btn" data-project="Дом 'Солнечный'">Смотреть фото</button>
             </div>
         </div>
     </div>
