--- a/project.html
+++ b/project.html
@@ -82,7 +82,7 @@
             <p>Срок строительства: 2.5 месяца</p>
             <div class="project-details">
                 <span class="project-price">от 1 425 000 ₽</span>
-                <button class="project-view-btn" data-project="openProjectModal('Дом Лесной')">Смотреть фото</button>
+                <button class="project-view-btn" onclick="openProjectModal('Дом Лесной')">Смотреть фото</button>
             </div>
         </div>
     </div>
