--- a/terrace.html
+++ b/terrace.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Террасные покрытия - EarthDom</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="terrace.css">
+    <link rel="stylesheet" href="modal.css">
 </head>
 <body>
     <!-- Навигационное меню -->
