--- a/bvdoma.html
+++ b/bvdoma.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Модульные дома под ключ - EarthDom</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="bvdoma.css">
-    <link rel="stylesheet" href="modal.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bvdoma.css">
+    <link rel="stylesheet" href="css/modal.css">
 </head>
 <body>
     <!-- Навигационное меню -->
