--- a/project.html
+++ b/project.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Проекты - EarthDom</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="project.css">
-    <link rel="stylesheet" href="modal.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/project.css">
+    <link rel="stylesheet" href="css/modal.css">
 </head>
 <body>
     <!-- Навигационное меню -->
