--- a/bvdoma.html
+++ b/bvdoma.html
@@ -285,13 +285,8 @@
         </div>
     </section>
 
-    <!-- Секция готовых объектов -->
-    <section class="completed-projects">
-        <div class="container">
-            <h2>ПОСМОТРИТЕ, КАКИЕ ДОМА МЫ УЖЕ ПОСТРОИЛИ</h2>
-            <p class="section-subtitle">60+ объектов в 12 регионах России: от дач и глампингов до конференц-холлов</p>
-            
-            
+    <!-- Секция проектов -->
+    <section class="projects">
         <h2 class="section-title terrace-section-title">Наши реализованные проекты</h2>
         <div class="projects-grid">
             <a href="project.html" class="project-card-link">
@@ -360,9 +355,7 @@
                 </div>
             </a>
         </div>
-        </div>
     </section>
-
     <!-- Секция доставки -->
     <section class="delivery-section">
         <div class="container">
