--- a/bvdoma.html
+++ b/bvdoma.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bvdoma.css">
     <link rel="stylesheet" href="css/modal.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <!-- Навигационное меню -->
