--- a/terrace.html
+++ b/terrace.html
@@ -36,8 +36,8 @@
     </nav>
     
     <!-- Герой-секция для террасных покрытий -->
-    <section class="materials-hero">
-        <div class="materials-hero-content">
+    <section class="terrace-hero">
+        <div class="terrace-hero-content">
             <h1>Террасные покрытия</h1>
             <p>Качественные и долговечные материалы для создания идеальной террасы</p>
         </div>
