--- a/terrace.html
+++ b/terrace.html
@@ -44,13 +44,13 @@
     </section>
 
     <!-- Секция с преимуществами террасных покрытий -->
-    <section class="advantages-section">
+    <section class="terrace-section">
         <div class="container">
             <!-- Найдите этот заголовок в секции преимуществ -->
             <h2 class="section-title terrace-section-title">Почему выбирают наши террасные покрытия</h2>
-            <div class="advantages-grid">
-                <div class="advantage-card">
-                    <div class="advantage-icon">🌧️</div>
+            <div class="terrace-grid">
+                <div class="terrace-card">
+                    <div class="terrace-icon">🌧️</div>
                     <h3>Устойчивость к влаге</h3>
                     <p>Специальная обработка защищает от воздействия влаги, грибка и плесени</p>
                 </div>
