--- a/project.html
+++ b/project.html
@@ -70,7 +70,7 @@
             <p>Срок строительства: 3 месяца</p>
             <div class="project-details">
                 <span class="project-price">от 1 800 000 ₽</span>
-                <button class="project-view-btn" data-project= "Дом \'Северный\'">Смотреть фото</button>
+                <button class="project-view-btn" data-project= "Дом 'Северный'">Смотреть фото</button>
             </div>
         </div>
     </div>
@@ -84,7 +84,7 @@
             <p>Срок строительства: 2.5 месяца</p>
             <div class="project-details">
                 <span class="project-price">от 1 425 000 ₽</span>
-                <button class="project-view-btn" onclick="openProjectModal('Дом Лесной')">Смотреть фото</button>
+                <button class="project-view-btn" data-project= "Дом 'Лесной'">Смотреть фото</button>
             </div>
         </div>
     </div>
@@ -112,7 +112,7 @@
             <p>Срок строительства: 2 месяца</p>
             <div class="project-details">
                 <span class="project-price">от 1 200 000 ₽</span>
-                <button class="project-view-btn" data-project="Дом \"Уютный\"">Смотреть фото</button>
+                <button class="project-view-btn" data-project="Дом 'Уютный'">Смотреть фото</button>
             </div>
         </div>
     </div>
@@ -126,7 +126,7 @@
             <p>Срок строительства: 5 месяцев</p>
             <div class="project-details">
                 <span class="project-price">от 2 700 000 ₽</span>
-                <button class="project-view-btn" data-project="Дом \"Современный\"">Смотреть фото</button>
+                <button class="project-view-btn" data-project="Дом 'Современный'">Смотреть фото</button>
             </div>
         </div>
     </div>
@@ -140,7 +140,7 @@
             <p>Срок строительства: 3.5 месяца</p>
             <div class="project-details">
                 <span class="project-price">от 2 100 000 ₽</span>
-                <button class="project-view-btn" data-project="Дом \"Классика\"">Смотреть фото</button>
+                <button class="project-view-btn" data-project="Дом 'Классика'">Смотреть фото</button>
             </div>
         </div>
     </div>
@@ -154,7 +154,7 @@
             <p>Срок выполнения: 3 недели</p>
             <div class="project-details">
                 <span class="project-price">от 450 000 ₽</span>
-                <button class="project-view-btn" data-project="Фасад \"Скандинавский стиль\"">Смотреть фото</button>
+                <button class="project-view-btn" data-project="Фасад 'Скандинавский стиль'">Смотреть фото</button>
             </div>
         </div>
     </div>
@@ -168,7 +168,7 @@
             <p>Срок выполнения: 4 недели</p>
             <div class="project-details">
                 <span class="project-price">от 680 000 ₽</span>
-                <button class="project-view-btn" data-project="Фасад \"Классический\"">Смотреть фото</button>
+                <button class="project-view-btn" data-project="Фасад 'Классический'">Смотреть фото</button>
             </div>
         </div>
     </div>
@@ -182,7 +182,7 @@
             <p>Срок выполнения: 2.5 недели</p>
             <div class="project-details">
                 <span class="project-price">от 520 000 ₽</span>
-                <button class="project-view-btn" data-project="Фасад \"Современный\"">Смотреть фото</button>
+                <button class="project-view-btn" data-project="Фасад 'Современный'">Смотреть фото</button>
             </div>
         </div>
     </div>
