--- a/project.html
+++ b/project.html
@@ -154,7 +154,7 @@
             <p>Срок выполнения: 3 недели</p>
             <div class="project-details">
                 <span class="project-price">от 450 000 ₽</span>
-                <button class="project-view-btn" data-project="Фасад 'Скандинавский стиль'">Смотреть фото</button>
+                <button class="project-view-btn" data-project="Фасад 'Скандинавский'">Смотреть фото</button>
             </div>
         </div>
     </div>
