--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/modal.css">
 </head>
 <body>
-    <!-- Навигационное меню -->
+    <!-- Навигационное мен. -->
     <nav id="navbar">
         <div class="nav-container">
             <a href="/" class="logo">EarthDom</a>
