--- a/project.html
+++ b/project.html
@@ -149,7 +149,7 @@
     <div class="project-card" data-category="facade completed">
         <div class="project-img" style="background-image: url('https://i.pinimg.com/736x/5a/8d/3c/5a8d3c0b6d8c8d0f0b8e8c8a8e8c8a8e8.jpg');"></div>
         <div class="project-info">
-            <h3>Фасад "Скандинавский стиль"</h3>
+            <h3>Фасад "Скандинавский"</h3>
             <p>Площадь фасада: 85 м²</p>
             <p>Срок выполнения: 3 недели</p>
             <div class="project-details">
