--- a/terrace.html
+++ b/terrace.html
@@ -206,7 +206,7 @@
             <div class="gallery-grid">
                 <!-- Проект 1 -->
                 <div class="gallery-item" data-gallery="project1">
-                    <img src="https://i.pinimg.com/736x/0f/92/c5/0f92c5f1ee2bce5d0ee792415b6ef6eb.jpg" alt="Терраса из ДПК" class="gallery-item-img">
+                    <img src="/image/facade1/5256075123540822991.jpg" alt="Терраса из ДПК" class="gallery-item-img">
                     <div class="gallery-item-overlay">
                         <div class="gallery-item-title">Терраса из ДПК</div>
                         <div class="gallery-item-subtitle">Загородный дом, Московская область</div>
