--- a/terrace.html
+++ b/terrace.html
@@ -24,7 +24,7 @@
                  <li><a href="/terrace.html">Террасные покрытия</a></li>
                 <li><a href="/bvdoma.html">Быстровозводимые дома</a></li>
                 <li><a href="/services.html">Услуги</a></li>
-                <li><a href="/services.html">Наши работы</a></li>
+                <li><a href="/works.html">Наши работы</a></li>
                 <li><a href="/company.html">О компании</a></li>
                 <li><a href="/contacts.html">Контакты</a></li>
                 <li>
