--- a/works.html
+++ b/works.html
@@ -81,10 +81,10 @@
                     <div class="work-img" style="background-image: url('./image/facade1/5256075123540822993.jpg');"></div>
                     <div class="work-info">
                         <div class="work-meta">
-                            <span class="work-category">Фасад</span>
+                            <span class="work-category">Терраса</span>
                             <span class="work-year">2023</span>
                         </div>
-                        <h2>Отделка фасада в классическом стиле</h2>
+                        <h2>Терраса в классическом стиле</h2>
                         <p>Комплексная отделка фасада частного дома</p>
                         <div class="work-details">
                             <span class="work-area">120 м²</span>
@@ -135,11 +135,11 @@
                     <div class="work-img" style="background-image: url('./image/facade2/5256075123540823007.jpg');"></div>
                     <div class="work-info">
                         <div class="work-meta">
-                            <span class="work-category">Фасад</span>
+                            <span class="work-category">Терраса</span>
                             <span class="work-year">2022</span>
                         </div>
-                        <h2>Современная отделка фасада</h2>
-                        <p>Утепление и отделка фасада комбинированными материалами</p>
+                        <h2>Современная терраса</h2>
+                        <p>Утеплённая терраса комбинированными материалами</p>
                         <div class="work-details">
                             <span class="work-area">95 м²</span>
                             <span class="work-time">2.5 недели</span>
