--- a/works.html
+++ b/works.html
@@ -77,7 +77,7 @@
                 </div>
 
                 <!-- Работа 2 -->
-                <div class="work-card" data-category="facade">
+                <div class="work-card" data-category="terrace">
                     <div class="work-img" style="background-image: url('./image/facade1/5256075123540822993.jpg');"></div>
                     <div class="work-info">
                         <div class="work-meta">
@@ -131,7 +131,7 @@
                 </div>
 
                 <!-- Работа 7 -->
-                <div class="work-card" data-category="facade">
+                <div class="work-card" data-category="terrace">
                     <div class="work-img" style="background-image: url('./image/facade2/5256075123540823007.jpg');"></div>
                     <div class="work-info">
                         <div class="work-meta">
