--- a/work.html
+++ b/work.html
@@ -537,17 +537,17 @@
     </footer>
 
     <!-- Модальное окно работы -->
-    <div id="workModal" class="modal">
-        <div class="modal-content">
-            <span class="modal-close">&times;</span>
-            <div class="modal-body">
-                <div class="modal-image">
-                    <img id="modalWorkImage" src="" alt="Работа">
-                    <div class="thumbnails-container" id="modalWorkThumbnails"></div>
-                </div>
-            </div>
+<div id="workModal" class="modal">
+    <div class="modal-content">
+        <span class="modal-close">&times;</span>
+        <div class="modal-body">
+            <button class="slide-arrow prev-arrow">‹</button>
+            <img id="modalWorkImage" src="" alt="Работа">
+            <button class="slide-arrow next-arrow">›</button>
+            <div class="thumbnails-container" id="modalWorkThumbnails"></div>
         </div>
     </div>
+</div>
 
     <script src="js/work.js"></script>
     <script src="js/script.js"></script>
