--- a/work.html
+++ b/work.html
@@ -265,10 +265,10 @@
             <button class="slide-arrow prev-arrow">‹</button>
             <img id="modalWorkImage" src="" alt="Работа">
             <button class="slide-arrow next-arrow">›</button>
+            <div class="image-counter" id="imageCounter"></div>
         </div>
     </div>
 </div>
-
     <script src="js/work.js"></script>
     <script src="js/script.js"></script>
 </body>
