--- a/bvdoma.html
+++ b/bvdoma.html
@@ -548,8 +548,7 @@
                     <li>Предлагаем 1-2 подходящих проекта или решение под вас.</li>
                     <li>В течение суток отправим вам на почту или в мессенджер:
                         <ul>
-                            <li> смету</li>
-                            <li> PDF-инструкцию «7 способов сэкономить до 1 млн. Р при строительстве дома»</li>
+                            Смету и PDF-инструкцию «7 способов сэкономить до 1 млн. Р при строительстве дома»
                         </ul>
                     </li>
                 </ol>
